--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 img {
   width: 350px;
   height: 220px;
-  border-radius: 30px;
+  border-radius: 50%;
   border: 2px solid black;
   box-shadow: 2px 2px 4px black;
+  object-fit: contain;
+  object-position: center;
 }
